Wire frames are not showing with subdivision surfaces #58407

Closed
opened 2018-12-01 07:08:40 +01:00 by Jason · 10 comments

System Information
Operating system:

Windows 7 Ultimate Service Pack 1

Graphics card:

Nvidia Quadro K5100M

Blender Version
Broken:
(example: 2.79b release)
(example: 2.80, edbf15d3c0, blender2.8, 2018-11-28, as found on the splash screen)
Worked: (optional)

Short description of error

When you add the subdivision surface modifier and go into wire frame mode you can't see the wire frames, All you see is an outline of your object. In 2.79 it works
as expected. You can see the wire frames. Screen shots below for reference

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).

Press TAB to go into edit mode
Create Edge loop on default box to cut it in half using ctrl R
Add Subdivison Surface modifier
press 3 on the NUM PAD to go in front Orthographic view
Change the view setting under the Subdivision Surface modifier to 3
Press Z on the keyboard and choose wire frame or click on the wire frame icon of the viewport

The Wire frame does not show up. Only a outline of the object shows up

Please see images below

Blender 2.79 Screen Shot

image.png

Blender 2.8 Beta Screen Shot

image.png

Also Open Sub Div is missing from the Subdivision Surface Modifier properties and in the users preferences

Thanks,
Jason

**System Information** Operating system: Windows 7 Ultimate Service Pack 1 Graphics card: Nvidia Quadro K5100M **Blender Version** Broken: (example: 2.79b release) (example: 2.80, edbf15d3c044, blender2.8, 2018-11-28, as found on the splash screen) Worked: (optional) **Short description of error** When you add the subdivision surface modifier and go into wire frame mode you can't see the wire frames, All you see is an outline of your object. In 2.79 it works as expected. You can see the wire frames. Screen shots below for reference **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). Press TAB to go into edit mode Create Edge loop on default box to cut it in half using ctrl R Add Subdivison Surface modifier press 3 on the NUM PAD to go in front Orthographic view Change the view setting under the Subdivision Surface modifier to 3 Press Z on the keyboard and choose wire frame or click on the wire frame icon of the viewport The Wire frame does not show up. Only a outline of the object shows up Please see images below Blender 2.79 Screen Shot ![image.png](https://archive.blender.org/developer/F5776361/image.png) Blender 2.8 Beta Screen Shot ![image.png](https://archive.blender.org/developer/F5776356/image.png) Also Open Sub Div is missing from the Subdivision Surface Modifier properties and in the users preferences Thanks, Jason
Author

Added subscriber: @jsboudreau

Added subscriber: @jsboudreau
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

It should work when you set the Wireframe slider to 1. (in the Overlays popover)
Not sure if the default should be changed there..

Does that solve the problem?

It should work when you set the Wireframe slider to 1. (in the Overlays popover) Not sure if the default should be changed there.. Does that solve the problem?
Author

Hi

Unfortunately that doesn’t work either. I have tried everything and still no wire frame

image.png

Thanks,
Jason

Hi Unfortunately that doesn’t work either. I have tried everything and still no wire frame ![image.png](https://archive.blender.org/developer/F5780559/image.png) Thanks, Jason
Member

Added subscribers: @fclem, @lichtwerk

Added subscribers: @fclem, @lichtwerk
Clément Foucault was assigned by Philipp Oeser 2018-12-05 15:37:09 +01:00
Member

reg. OpenSubdiv in the properties of the modifier: this is now always using OpenSubdiv (older method was removed), so no option here...

reg. Wireframes: I can confirm actually and would like to get @fclem on board. Is this by design?
(note: I think this has been reported before but I couldnt find the duplicate...)

reg. OpenSubdiv in the properties of the modifier: this is now always using OpenSubdiv (older method was removed), so no option here... reg. Wireframes: I can confirm actually and would like to get @fclem on board. Is this by design? (note: I think this has been reported before but I couldnt find the duplicate...)

This issue was referenced by 0424ee86f0

This issue was referenced by 0424ee86f0082db3a62f2f833bca63dd2e899dae

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @OlegBondarev

Added subscriber: @OlegBondarev

Check out "Optimal Display" box in modifire stack.
image.png

Screenshot_4.jpg

Check out "Optimal Display" box in modifire stack. ![image.png](https://archive.blender.org/developer/F8765132/image.png) ![Screenshot_4.jpg](https://archive.blender.org/developer/F8765135/Screenshot_4.jpg)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58407
No description provided.