Fix T58407: Wire frames are not showing with subdivision surfaces