source/blender/draw/intern/draw_cache_impl_mesh.c
@@ -4413,7 +4413,6 @@ static GPUTexture *mesh_batch_cache_get_edges_overlay_texture_buf(
 {
 	BLI_assert(rdata->types & (MR_DATATYPE_VERT | MR_DATATYPE_EDGE | MR_DATATYPE_LOOP | MR_DATATYPE_LOOPTRI));
 
-	BLI_assert(rdata->edit_bmesh == NULL); /* Not supported in edit mode */
 
 	if (cache->edges_face_overlay_tx != NULL) {
 		return cache->edges_face_overlay_tx;
@@ -5108,6 +5107,28 @@ void DRW_mesh_batch_cache_get_wireframes_face_texbuf(
 
 	if (cache->edges_face_overlay_tx == NULL || cache->pos_in_order_tx == NULL) {
 		const int options = MR_DATATYPE_VERT | MR_DATATYPE_EDGE | MR_DATATYPE_LOOP | MR_DATATYPE_LOOPTRI;
+
+		/* Hack to show the final result. */
+		BMesh *bm_mapped = NULL;
+		const int *p_origindex = NULL;
+		const bool use_em_final = (
+		        me->edit_btmesh &&
+		        me->edit_btmesh->mesh_eval_final &&
+		        (me->edit_btmesh->mesh_eval_final->runtime.is_original == false));
+		Mesh me_fake;
+		if (use_em_final) {
+			/* Pass in mapped args. */
+			bm_mapped = me->edit_btmesh->bm;
+			p_origindex = CustomData_get_layer(&me->edit_btmesh->mesh_eval_final->pdata, CD_ORIGINDEX);
+			if (p_origindex == NULL) {
+				bm_mapped = NULL;
+			}
+
+			me_fake = *me->edit_btmesh->mesh_eval_final;
+			me_fake.mat = me->mat;
+			me_fake.totcol = me->totcol;
+			me = &me_fake;
+		}
 
 		MeshRenderData *rdata = mesh_render_data_create(me, options);
 
